--- a/server/package.json
+++ b/server/package.json
@@ -9,18 +9,18 @@
         "dev": "tsx watch index.ts",
         "build": "tsc"
     },
-    "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
-        "express": "^5.2.1",
-        "pg": "^8.16.3"
-    },
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/node": "^22.19.3",
         "@types/pg": "^8.16.0",
-        "tsx": "^4.21.0",
         "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^5.2.1",
+        "pg": "^8.16.3",
+        "tsx": "^4.21.0"
     }
 }
