--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,13 @@
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/jsonwebtoken": "^9.0.10",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^5.2.1",
+        "jsonwebtoken": "^9.0.3",
         "pg": "^8.16.3",
         "tsx": "^4.21.0"
     }
