--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "tsx server/index.ts",
+    "server": "tsx watch server/index.ts",
     "start": "tsx server/index.ts",
     "build": "vite build",
     "build:dev": "vite build --mode development",
