--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.2.1",
+    "file-saver": "^2.0.5",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.462.0",
     "multer": "^2.0.2",
     "next-themes": "^0.3.0",
@@ -78,6 +81,7 @@
     "tsx": "^4.21.0",
     "vaul": "^0.9.9",
     "vite-plugin-pwa": "^1.2.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
