--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,13 @@
     "dependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/multer": "^2.0.0",
         "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^5.2.1",
         "jsonwebtoken": "^9.0.3",
+        "multer": "^2.0.2",
         "pg": "^8.16.3",
         "tsx": "^4.21.0"
     }
